--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -28,24 +28,76 @@ jobs:
     
     - name: Download Antares continuous delivery release
       run: |
-        # Download using direct URL pattern for continuous delivery release
-        # The continuous delivery release is always the latest release with that tag
-        curl -L -o antares-cd-Ubuntu-22.04.tar.gz \
-          "https://github.com/AntaresSimulatorTeam/Antares_Simulator/releases/download/continuous-delivery/antares-cd-Ubuntu-22.04.tar.gz" || \
-        curl -L -o antares-cd-Ubuntu-22.04.tar.gz \
-          "https://github.com/AntaresSimulatorTeam/Antares_Simulator/releases/latest/download/antares-cd-Ubuntu-22.04.tar.gz"
+        # Use GitHub API to find the continuous delivery release and get the download URL
+        echo "Fetching continuous delivery release information..."
+        
+        # Get all releases and find the one with "continuous delivery" in the name
+        RELEASE_DATA=$(curl -s https://api.github.com/repos/AntaresSimulatorTeam/Antares_Simulator/releases | \
+          python3 -c "
+import sys, json
+releases = json.load(sys.stdin)
+for release in releases:
+    if 'continuous delivery' in release.get('name', '').lower():
+        print(json.dumps(release))
+        break
+")
+        
+        if [ -z "$RELEASE_DATA" ]; then
+          echo "Error: Could not find continuous delivery release"
+          exit 1
+        fi
+        
+        # Extract the download URL for antares-cd-Ubuntu-22.04.tar.gz
+        ASSET_URL=$(echo "$RELEASE_DATA" | python3 -c "
+import sys, json
+data = json.load(sys.stdin)
+for asset in data.get('assets', []):
+    if asset['name'] == 'antares-cd-Ubuntu-22.04.tar.gz':
+        print(asset['browser_download_url'])
+        break
+")
+        
+        if [ -z "$ASSET_URL" ]; then
+          echo "Error: Could not find antares-cd-Ubuntu-22.04.tar.gz asset"
+          echo "Available assets:"
+          echo "$RELEASE_DATA" | python3 -c "import sys, json; data = json.load(sys.stdin); [print(f\"  - {a['name']}\") for a in data.get('assets', [])]"
+          exit 1
+        fi
+        
+        echo "Downloading from: $ASSET_URL"
+        curl -L -f -o antares-cd-Ubuntu-22.04.tar.gz "$ASSET_URL"
+        
+        if [ ! -f "antares-cd-Ubuntu-22.04.tar.gz" ]; then
+          echo "Error: Download failed"
+          exit 1
+        fi
+        
+        echo "Download successful. File size: $(ls -lh antares-cd-Ubuntu-22.04.tar.gz | awk '{print $5}')"
     
     - name: Extract Antares binaries
       run: |
+        echo "Listing contents of tar.gz before extraction:"
+        tar -tzf antares-cd-Ubuntu-22.04.tar.gz | head -20
+        
+        echo "Extracting archive..."
         tar -xzf antares-cd-Ubuntu-22.04.tar.gz
+        
+        echo "Listing extracted contents:"
+        ls -la
     
     - name: Verify Antares binaries
       run: |
         if [ ! -d "antares-cd-Ubuntu-22.04" ]; then
           echo "Error: antares-cd-Ubuntu-22.04 directory not found after extraction"
+          echo "Current directory contents:"
+          ls -la
+          echo "Looking for alternative directories:"
+          find . -maxdepth 2 -type d -name "*antares*" 2>/dev/null || true
           exit 1
         fi
         echo "Antares binaries extracted successfully"
+        echo "Directory structure:"
+        ls -la antares-cd-Ubuntu-22.04/
     
     - name: Run end-to-end tests
       run: |
