--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -2,9 +2,9 @@ name: End-to-End Tests
 
 on:
   push:
-    branches: ['**']
+    branches: ['*']
   pull_request:
-    branches: ['**']
+    branches: ['*']
   workflow_dispatch:
 
 jobs:
