update(init): add init and update workflow file

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -77,7 +77,7 @@ jobs:
     
     - name: Run end-to-end tests
       run: |
-        pytest -n auto src/tests/e2e/end_2_end_tests.py -v
+        python -m pytest -n auto src/tests/e2e/end_2_end_tests.py -v
     
     - name: Cleanup
       if: always()
