fix(e2e-tests): fix bug in parallel execution of tests and move tests into root of the project

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -46,7 +46,7 @@ jobs:
     
     - name: Run end-to-end tests
       run: |
-        python -m pytest -n auto src/tests/e2e/end_2_end_tests.py -v
+        python -m pytest -n auto tests/e2e/end_2_end_tests.py -v -s
     
     - name: Cleanup
       if: always()
