--- a/resources/pypsa_models/pypsa_models.yml
+++ b/resources/pypsa_models/pypsa_models.yml
@@ -192,8 +192,10 @@ library:
       - id: max_production
         expression: sum(p) <= e_sum_max
       objective-contributions:
-        - id: objective
-          expression: sum(marginal_cost * p) + p_nom * capital_cost
+        - id: capital_objective
+          expression: p_nom * capital_cost
+        - id: operational_objective
+          expression: sum(marginal_cost * p) 
 
     - id: link
     #Model for PyPSA link: https://pypsa.readthedocs.io/en/latest/user-guide/components.html#link
@@ -278,8 +280,10 @@ library:
         - id: p0_lower
           expression: p0 >= p_min_pu * p_nom
       objective-contributions:
-        - id: objective
-          expression: sum(marginal_cost * p0) + capital_cost * p_nom
+        - id: capital_objective
+          expression: capital_cost * p_nom
+        - id: operational_objective
+          expression: sum(marginal_cost * p0) 
 
   
     - id: storage_unit
@@ -386,8 +390,10 @@ library:
         - id: state_of_charge_balance
           expression: state_of_charge = (1- standing_loss) * state_of_charge[t-1] + efficiency_store * p_store - p_dispatch / efficiency_dispatch  + inflow - spill
       objective-contributions:
-        - id: objective
-          expression: sum(marginal_cost * p_dispatch + spill_cost*spill + marginal_cost_storage * state_of_charge) + capital_cost * p_nom
+        - id: capital_objective
+          expression: capital_cost * p_nom
+        - id: operational_objective
+          expression: sum(marginal_cost * p_dispatch + spill_cost*spill + marginal_cost_storage * state_of_charge) 
 
     - id: store
       #Model for PyPSA store: https://pypsa.readthedocs.io/en/latest/user-guide/components.html#store
@@ -465,8 +471,11 @@ library:
         - id: energy_balance
           expression: e = (1 - standing_loss) * e[t-1] - p
       objective-contributions:
-        - id: objective
-          expression: sum(marginal_cost * p + marginal_cost_storage * e) + capital_cost * e_nom
+        - id: capital_objective
+          expression: capital_cost * e_nom
+        - id: operational_objective
+          expression: sum(marginal_cost * p + marginal_cost_storage * e) 
+
 
 
 
