update(study type): add study type checking -fix tiny error inside workflow file

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -24,12 +24,14 @@ jobs:
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
 
-    - name: Run Ruff format check
-      run: ruff format --check src
-
     - name: Run Ruff linting
-      run: ruff check src
+      run: |
+        ruff check src
+        ruff check tests
 
     - name: Run Mypy type checking
-      run: mypy src
+      run: | 
+        mypy src
+        mypy tests
+
       continue-on-error: false
