--- a/resources/pypsa_models/pypsa_models.yml
+++ b/resources/pypsa_models/pypsa_models.yml
@@ -36,7 +36,7 @@ library:
       parameters:
         - id: v_nom
           time-dependent: false
-          scenario-dependent: true
+          scenario-dependent: false
         #- id: type # This parameter is not used in the Gems model
         - id: x
           time-dependent: false
