--- a/resources/pypsa_models/pypsa_models.yml
+++ b/resources/pypsa_models/pypsa_models.yml
@@ -422,7 +422,7 @@ library:
         #- id: q_set #Parameter not instantiated for now
         - id: sign #default value = 1
           time-dependent: false
-          scenario-dependent: true
+          scenario-dependent: false
         - id: marginal_cost
           time-dependent: true
           scenario-dependent: true
