--- a/resources/pypsa_models/pypsa_models.yml
+++ b/resources/pypsa_models/pypsa_models.yml
@@ -80,7 +80,7 @@ library:
           scenario-dependent: true
         - id: sign #default value = -1
           time-dependent: false
-          scenario-dependent: true
+          scenario-dependent: false
         #- id: active #Parameter that is not instantiated: only active components are built by the data converter.
       ports:
         - id: p_balance_port
