--- a/resources/pypsa_models/pypsa_models.yml
+++ b/resources/pypsa_models/pypsa_models.yml
@@ -309,7 +309,7 @@ library:
         #- id: q_set #Parameter not instantiated for now
         - id: sign #default value = 1
           time-dependent: false
-          scenario-dependent: true
+          scenario-dependent: false
         #- id: carrier # This parameter is not used in the Gems model
         - id: spill_cost #Parameter not instantiated for now
           time-dependent: true
