fix(pypsa_models.yml): change scenario-depentend for capital cost true->false

--- a/resources/pypsa_models/pypsa_models.yml
+++ b/resources/pypsa_models/pypsa_models.yml
@@ -135,7 +135,7 @@ library:
         #- id: lifetime #Parameter not instantiated for now
         - id: capital_cost
           time-dependent: false
-          scenario-dependent: true
+          scenario-dependent: false
         - id: efficiency
           time-dependent: true
           scenario-dependent: true
