--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,13 +42,11 @@ jobs:
 
     - name: Run end-to-end tests
       run: |
-        python -m pytest -n auto tests/e2e/end_2_end_tests.py -v -s
+        python -m pytest -n auto tests/e2e/end_2_end_tests.py -v -s --log-cli-level=INFO --tb=short -rA
 
     - name: Run unit tests
       run: |
-        python -m pytest -n auto tests/unit_tests/test_pypsa_preprocessor_and_register.py -v -s
-        python -m pytest -n auto tests/unit_tests/test_write_and_register_time_series.py -v -s
-        python -m pytest -n auto tests/unit_tests/tests_converter.py -v -s
+        python -m pytest -n auto tests/unit_tests/ -v -s --log-cli-level=INFO --tb=short -rA
 
     - name: Cleanup
       if: always()
